compiler/tests/compiler/must_fail/t_13.mil.exp.err
Parsing tests/compiler/must_fail/t_13.mil as MIL

tests/compiler/must_fail/t_13.mil:2:10: 2:11 error: variable x undeclared
  return x;
         ^^
