compiler/tests/compiler/must_fail/t_13.mil
fn foo() -> stack u64 {
  return x;
}

/*
START:CMD
ARG="print[input]"
END:CMD
*/
